# bark-mcp

./: .env.example  .gitignore  LICENSE  PRD.md  README.md  publish.sh  pyproject.toml  run.sh  setup.py  test_client.py
bark_mcp/: __init__.py  cli.py  server.py
